syntax = "proto3";

package controller.api.resources.hosts.v1;

option go_package = "github.com/hashicorp/boundary/internal/gen/controller/api/resources/hosts;hosts";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "controller/api/resources/hosts/v1/host.proto";
import "controller/api/resources/scopes/v1/scope.proto";
import "controller/custom_options/v1/options.proto";

// HostSet is a collection of Hosts created and managed by a HostCatalog
message HostSet {
	// The ID of the host
	// Output only.
	string id = 1;

	// Scope information for this resource
	// Output only.
	resources.scopes.v1.ScopeInfo scope = 2;

	// Optional name for identification purposes
	google.protobuf.StringValue name = 3 [(custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = {this:"name" that: "name"}];

	// Optional user-set description for identification purposes
	google.protobuf.StringValue description = 4 [(custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = {this:"description" that: "description"}];

	// The time this resource was created
	// Output only.
	google.protobuf.Timestamp created_time = 5 [json_name="created_time"];

	// The time this resource was last updated
	// Output only.
	google.protobuf.Timestamp updated_time = 6 [json_name="updated_time"];

	// The version can be used in subsequent write requests to ensure this resource
	// has not changed and to fail the write if it has.
	// Output only.
	uint32 version = 7;

	// The type of the resource, to help differentiate schemas
	google.protobuf.StringValue type = 8 [(custom_options.v1.generate_sdk_option) = true];

	// The total count of hosts in this host set
	// Output only.
	uint32 size = 9;

	// A list of hosts in this host set
	// TODO: Figure out if this should be in the basic HostSet view and what
	// view to use on the Hosts.
	// Output only.
	repeated string host_ids = 10;
}
